--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,12 +2,13 @@
 @import 'colors';
 @import 'menu';
 @import 'placements';
+@import 'prebid';
 
-body {
+html, body {
     font-family: 'Roboto', sans-serif;
     width: 100%;
     min-width: 300px;
-    min-height: 300px;
+    min-height: 400px;
     margin: 0;
 }
 
@@ -15,7 +16,7 @@ body {
     overflow: auto;
     background: $secondary;
     width: 90%;
-    margin: 50px auto;
+    margin: 50px auto 0 auto;
 }
 
 .info {
