--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,6 +4,7 @@
 @import 'placements';
 @import 'prebid';
 @import 'customGranularities';
+@import 'bidders';
 @import './../../node_modules/highlight.js/styles/vs2015';
 
 html, body {
